syntax = "proto3";

option csharp_namespace = "GrcpOyasumiCore";

package OyasumiCore;

service OyasumiCore {
  rpc OnOverlaySidecarStart (OverlaySidecarStartArgs) returns (Empty) {}
  rpc OnElevatedSidecarStart (ElevatedSidecarStartArgs) returns (Empty) {}
  rpc SendEvent (EventParams) returns (Empty) {}
  rpc GetHTTPServerPort (Empty) returns (HTTPServerPort) {}
  rpc AddNotification (AddNotificationRequest) returns (AddNotificationResponse) {}
}

message HTTPServerPort {
  uint32 port = 1;
}

message OverlaySidecarStartArgs {
  uint32 pid = 1;
  uint32 grpc_port = 2;
  uint32 grpc_web_port = 3;
}

message ElevatedSidecarStartArgs {
  uint32 pid = 1;
  uint32 grpc_port = 2;
  uint32 grpc_web_port = 3;
  // Set to the pid of the previous process in case the sidecar relaunched itself
  optional uint32 old_pid = 4;
}

message EventParams {
  string event_name = 1;
  oneof event_data {
    string string_data = 2;
    bool bool_data = 3;
    string json_data = 4;
    int32 int_data = 5;
    double double_data = 6;
  }
}

message AddNotificationRequest {
  string message = 1;
  uint32 duration = 2;
}

message AddNotificationResponse {
  optional string notification_id = 1;
}

message Empty {}
